--- a/index.html
+++ b/index.html
@@ -3,10 +3,13 @@
   <head>
     <title>FemboyHUB</title>
     <meta name="description" content="Your daily dose of femboys.">
+    <link href="styles.css">
   </head>
 
   <body>
-    <h1>Work in progress uwu</h1>
+    <h2 class="logo1">Femboy</h2>
+    <h2 class="logo2">HUB</h2>
+    <p>Work in progress 💀</p>
   </body>
   
 </html>
