--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>FemboyHUB</title>
     <meta name="description" content="Your daily dose of femboys.">
+    <meta name="theme-color" content="#000000">
     <link href="styles.css">
   </head>
 
